1.39 frontend vhook FFmpeg設定にアス比共通画面追加 変換時 -samx オプションにより動画アス比保持可能 オプションファイル追加　５　PCx3,PSPx2 ＠ボタン(視聴者コメント)　対応 /replace(投稿者ニワン語)　対応 ヘルプメニューからffmpegヘルプを実行可能 1時間超えのstatus表示内部変更
git-svn-id: svn+ssh://svn.osdn.jp/svnroot/saccubus/branches/dev_branch@435 c31a3d4d-7098-419a-a5c4-0623780f6bbf